--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>This Can't Be Real 01</title></head><body> <script src="app.7de31c65.js"></script>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>This Can't Be Real 01</title>
+</head>
+<body>
+    <script src="/app.a6a4d504.js"></script>
+</body>
+</html>
